# MasterThesis

./: .gitignore  README.md  az_main.py  environment.yml  main.py  study1.txt  test.py  tune_log.txt
checkpoints/: .gitignore
gym/hex/: .gitignore  Cargo.toml  README.md  compile  pyproject.toml
gym/hex/src/: board.rs  color.rs  coords.rs  env.rs  envs.rs  game.rs  hex_cells.rs  lib.rs  main.rs  python.rs  union_find.rs
gym/hex/src/gym/: action.rs  collector.rs  config.rs  env.rs  envs.rs  episode.rs  info.rs  mod.rs  obs.rs  worker.rs
gym/hex/src/search/: arena.rs  az.rs  az_core.rs  evaluator.rs  mcts.rs  mcts_core.rs  mod.rs  node.rs  result.rs  state.rs
hex/: Cargo.toml
hex/src/: board.rs  python.rs
pg_test/: impala.py  mpo.py  mpo_model.py  pg_test.py  retrace_torch_policy.py
src/: config.py  envs.py  model.py  plan.py  policy.py  preprocess.py  process.py  sample_batch.py  trainer.py  worker.py
src/debug/: ablation2.py  combine_eps.py  create_dataset.py  elo.py  envs_bench.py  extract1.py  interval.py  lr1.py  onnx.py  pgs_tune.py  plot.py  plot1.py  plot3.py  plot3b.py  plotpgs.py  plottrainwinrates.py  study1.py  study2.py  study3.py  study3b.py  study4.py  study5.py  test_batch_size.py  train_model.py  util.py
src/env/: discretize_env.py  envs.py  hex.py  pendulum.py  replay_buffer.py  sample_batch.py  sample_manager.py  worker.py
src/mcts/: mcts.py
src/networks/: fnn.py  model.py  nets.py  policy.py  policy_pend.py  residual.py  residual_model.py
src/scripts/: az.py  az_exit_pdlm.py  az_main.py  az_pdlm.py  eval_hex.py  eval_pdlm.py  eval_position.py  exit.py  exit_pdlm.py  hex.py  hex_mcts.py  mz_pdlm.py  pg.py  pg_model.py  pg_pdlm.py  pg_pendulum.py  pgs_pdlm.py  test.py  trainer_pdlm.py  tune.py
src/search/: alpha_zero.py  evaluator.py  (+12 more)
(+42 files in other folders)
