[package]
name = "hexgame"
version = "0.1.0"
edition = "2021"
authors = ["Martin Altmayer"]
license = "GPL-3.0-or-later"
description = "Simple and performant implementation of the Hex board game"
repository = "https://github.com/MartinAltmayer/hexgame"
categories = ["games"]
default-run = "hexgame"

[target.'cfg(any(windows, unix))']
rustflags = ["-C target-cpu=native"]

[profile.release]
lto = true

[lib]
name = "hexgame"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test"

[dependencies]
bincode = "1.3.3"
serde = {version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde-pickle = "1.0"
pyo3 = { version = "0.17", features = ["extension-module"] }
numpy = "0.17"
crossbeam = "0.8"
rand = "0.8"
core_affinity = "0.7.*"
itertools = "0.10"
atomic_ref = "0.2.1"
lazycell = "1.3.0"
fixed = "1.20.0"
ndarray-stats = "0.5.1"
ort = { version = "1.13.1", features = ["cuda"] }